# yolo11s-tensorrt-rs

./: .gitignore  Cargo.toml  LICENSE  PERFORMANCE_ANALYSIS.md  PROJECT_STRUCTURE.md  README.md  build.rs  run_example.sh
examples/: basic_usage.rs  detailed_timing.rs  simple_test.rs
src/: error.rs  lib.rs  types.rs  yolo.rs  yolo_c_api.rs
tensorrt_core/: CMakeLists.txt
tensorrt_core/include/: tensorrt_inference.h  yolo_c_api.h
tensorrt_core/include/cuda/: cuda_utils.h
tensorrt_core/include/yolo/: config.h  logging.h  postprocess.h  types.h  utils.h
tensorrt_core/plugin/: yololayer.cu
tensorrt_core/src/: tensorrt_inference.cpp  yolo_c_api.cpp
tensorrt_core/src/cuda/: preprocess.cu
tensorrt_core/src/yolo/: logging.cpp  postprocess.cpp
