[package]
name = "yolo11s-tensorrt-rs"
version = "0.2.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "高性能的 YOLO11s 分割模型 Rust 绑定，基于 TensorRT 和 CUDA 加速"
license = "MIT"
repository = "https://github.com/lujing-jlu/yolo11s-tensorrt-rs"
keywords = ["yolo", "tensorrt", "cuda", "object-detection", "segmentation", "deep-learning"]
categories = ["api-bindings", "science", "multimedia"]
readme = "README.md"
documentation = "https://docs.rs/yolo11s-tensorrt-rs"

[dependencies]
image = "0.24"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
criterion = "0.5"

[lib]
name = "yolo11s_tensorrt_rs"
path = "src/lib.rs"

[[bin]]
name = "test"
path = "src/bin/test.rs"

[features]
default = []
# 启用详细日志
verbose = []
# 启用性能分析
profiling = []
# 启用 CUDA 内存管理
cuda_memory = []
